--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,7 +173,9 @@
 
     <string name="app_preferences">App preferences</string>
 
-    <string name="default_media_service_error">An error has occurred. If the song file has been moved or deleted please wait for the library to refresh.</string>
+    <string name="error_media_service_default">A playback error has occurred. If the song file has been moved or deleted please wait for the library to refresh.</string>
+    <string name="error_media_service_empty_queue">A playback error has occurred. The play queue is empty.</string>
+    <string name="error_media_service_player_state">A playback error has occurred. The media player must be restarted.</string>
 
     <string name="no">No</string>
     <string name="yes">Yes</string>
