Enhancement/media service error reporting (#27)
* Refactored deprecated stopForeground method

* Handled deprecated getParcelableExtra implementation and improved media browser error handling

* Improved media browser error handling

* Typo correction

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,7 +107,6 @@
     <string name="fast">Fast</string>
     <string name="normal">Normal</string>
     <string name="track">Track</string>
-    <string name="error">An error has occurred. If the song file has been moved or deleted please wait for the library to refresh.</string>
     <string name="artist_name">Artist name</string>
     <string name="about">About</string>
     <string name="app_info">App information</string>
@@ -173,6 +172,10 @@
     <string name="album_updated">Album updated!</string>
 
     <string name="app_preferences">App preferences</string>
+
+    <string name="error_media_service_default">A playback error has occurred. If the song file has been moved or deleted please wait for the library to refresh.</string>
+    <string name="error_media_service_empty_queue">A playback error has occurred. The play queue is empty.</string>
+    <string name="error_media_service_player_state">A playback error has occurred. The media player must be restarted.</string>
 
     <string name="no">No</string>
     <string name="yes">Yes</string>
