--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,7 +172,7 @@
     <string name="album_updated">Album updated!</string>
 
     <string name="displayed_song">1 song</string>
-    <string name="displayed_songs">%1$i songs</string>
+    <string name="displayed_songs">%1$d songs</string>
     <string name="disc_number">Disc %1$s</string>
 
     <string name="app_preferences">App preferences</string>
